--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
-{
-  "name": "schreibwerk-studio",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "framer-motion": "10.16.4",
-    "lucide-react": "0.344.0"
-  }
+"dependencies": {
+  "next": "14.1.0",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "framer-motion": "10.16.4",
+  "lucide-react": "0.344.0"
+},
+"devDependencies": {
+  "typescript": "5.3.3",
+  "@types/react": "18.2.73",
+  "@types/node": "20.11.20"
 }
