--- a/package.json
+++ b/package.json
@@ -19,4 +19,7 @@
     "@types/react": "18.2.73",
     "@types/node": "20.11.20"
   }
+"tailwindcss": "3.4.3",
+"postcss": "8.4.31",
+"autoprefixer": "10.4.20"
 }
