--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "devDependencies": {
     "typescript": "5.3.3",
     "@types/react": "18.2.73",
-    "@types/node": "20.11.20"
+    "@types/node": "20.11.20",
+    "tailwindcss": "3.4.3",
+    "postcss": "8.4.31",
+    "autoprefixer": "10.4.20"
   }
-"tailwindcss": "3.4.3",
-"postcss": "8.4.31",
-"autoprefixer": "10.4.20"
 }
